test: to add assertion on database in update employee tests